# libspectrum

./: .gitignore  ChangeLog  Makefile.am  README  accessor.pl  buffer.c  configure.ac  creator.c  crypto.c  dck.c  ide.c  internals.h  libspectrum.c  libspectrum.h.in  libspectrum.pc.in  make-perl.c  microdrive.c  pzx_read.c  rzx.c  snap_accessors.txt  snapshot.c  szx.c  tape.c  tape_accessors.pl  tape_block.c  tape_set.pl  utilities.c  wav.c  wav_audiofile.c  wav_internals.h  wav_macos.c  z80.c  zip.c  zip.h
.github/workflows/: build_linux_sub.yml  build_macos.yml  build_macos_sub.yml  build_wii_sub.yml  build_windows_sub.yml
doc/: Makefile.am  libspectrum.3  libspectrum.txt
myglib/: ghash.c  glock.c  gslist.c
test/: Makefile.am  pzx-archive-info-tags.pzx  szx.c  test.c  test_edges.c  wav-fixtures.pl
